@@ -8,6 +8,16 @@ WIP
     Value range in "1" to "100". Default is "30" samples.
     Higher value results more smoothness, but may lose accuracy.
 
+* Flag Widget
+  - "Pit Request" indicator now shows pit-in countdown (laps) reading.
+    Note, countdown (laps) value is always calculated towards
+    the finish line of current stint's final lap rather than
+    estimated remaining laps that current fuel or energy can run.
+    If countdown drops below 1.0 (laps), it indicates the final lap of current stint,
+    and driver should pit in before the end of current lap to refuel.
+    If countdown reaches zero or negative, there may still be some fuel or energy left in tank,
+    however it will not be enough to complete another full lap before pit stop.
+
 * Weather forecast Widget
   - Add "number_of_forecasts" option,
     which sets number of forecasts to display.
